moves back to top btn to left to avoid overlapping with Iubenda btn

--- a/styles/main.less
+++ b/styles/main.less
@@ -602,7 +602,7 @@ background-image: url("data:image/svg+xml,%3Csvg width='100' height='20' viewBox
 .back-to-top{
 	position: fixed;
 	bottom: 0px;
-	right: 0;
+	left: 0;
 	z-index: 1;
 	display: none;
 	width: 40px;
